--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h1>Mes experiences</h1>
         <div class="expBoxContainer">
             <div class="expBox">
-                <div class="expSVGContainer"id="inver"><img src="assets/logo_python.png" width="55%" filter:invert(1)></div>
+                <div class="expSVGContainer"><img src="assets/logo_python.png" width="55%" filter:invert(1)></div>
                 <div class="expNameContainer">
                     <p>Python</p>
                 </div>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="expBox">
-                <div class="expSVGContainer"id="satur"><img src="assets/logo_html.png" width="55%" filter:saturate(0%)></div>
+                <div class="expSVGContainer"><img src="assets/logo_html.png" width="55%" filter:saturate(0%)></div>
                 <div class="expNameContainer">
                     <p>HTML</p>
                 </div>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="expBox">
-                <div class="expSVGContainer"id="satur"><img src="assets/logo_kotlin.png" width="55%" filter:invert(1)></div>
+                <div class="expSVGContainer"><img src="assets/logo_kotlin.png" width="55%" filter:invert(1)></div>
                 <div class="expNameContainer">
                     <p>Kotlin</p>
                 </div>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="expBox">
-                <div class="expSVGContainer"id="satur"><img src="assets/logo_css.png" width="55%" filter:invert(1)></div>
+                <div class="expSVGContainer"><img src="assets/logo_css.png" width="55%" filter:invert(1)></div>
                 <div class="expNameContainer">
                     <p>CSS</p>
                 </div>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="expBox">
-                <div class="expSVGContainer"id="satur"><img src="assets/logo_golang.png" width="55%" filter:invert(1)></div>
+                <div class="expSVGContainer"><img src="assets/logo_golang.png" width="55%" filter:invert(1)></div>
                 <div class="expNameContainer">
                     <p>Golang</p>
                 </div>
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="expBox">
-                <div class="expSVGContainer"id="satur"><img src="assets/logo_sql.png" width="55%" filter:invert(1)></div>
+                <div class="expSVGContainer"><img src="assets/logo_sql.png" width="55%" filter:invert(1)></div>
                 <div class="expNameContainer">
                     <p>SQL</p>
                 </div>
@@ -166,6 +166,7 @@
                     <p>Email: maxime.piau04@gmail.com</p>
                     <p>Ville: Ancenis 44150</p>
                     <a href="assets/CV_MaximePiau.pdf" download><button>Télécharger mon CV</button></a>
+                    <a href="assets/LettreMotivation_MaximePiau.pdf" download><button>Télécharger ma lettre de motivation</button></a>
                 </div>
                 <div class="contact-form">
                     <form id="contactForm" action="#" method="post">
@@ -178,7 +179,7 @@
                         <label for="message">Votre Message</label>
                         <textarea id="message" name="message" placeholder="Votre message..." style="height:100px" required></textarea>
                         
-                        <input type="submit" value="Send Message">
+                        <input type="submit" value="Envoyé le message">
                     </form>
                 </div>
             </div>
