--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
     <div class="parcours">
         <titre>Mon Parcours</titre>
         <container>
-            <boxleft><h2>Collège René Guy Cadou  -  Ancenis  -  2016/2020</h2>
-                <h3>C'est durant mon année de 3ème que j'ai découvert ma passion pour l'informatique. <br>
-                    C'est pourquoi j'ai réalisé mon stage de 3ème dans un service informatique.</h3></boxleft>
+            <boxleft><h2>IUT Nantes  -  BUT informatique  -   2023/2024</h2>
+                <h3>J’ai découvert divers langages informatiques en BUT.</h3>
+                <h3>J’ai donc réalisé plusieurs projets comme des sites web (HTML et CSS), des requêtes en SQL, des mini-jeux en Golang, en Python et en Kotlin.
+                    </h3></boxleft>
             <boxvide></boxvide>
             <boxvide></boxvide>
             <boxright><h2>Lycée Polyvalent Joubert Maillard  -  Ancenis  -  2020/2023</h2>
             <h3>J'ai tout naturellement choisit de suivre les spécialités Mathématiques et NSI.</h3>
             <h3>J'ai eu l'occasion de découvrir les bases de l'informatique et de développé</h3>
             <h3> quelques minis jeux en Python ainsi que des sites en HTML</h3></boxright>
-            <boxleft><h2>IUT Nantes  -  BUT informatique  -  </h2>
-            <h3>J’ai découvert divers langages informatiques en BUT.</h3>
-            <h3>J’ai donc réalisé plusieurs projets comme des sites web (HTML et CSS), des requêtes en SQL, des mini-jeux en Golang, en Python et en Kotlin.
-                </h3></boxleft>
+            <boxleft><h2>Collège René Guy Cadou  -  Ancenis  -  2016/2020</h2>
+            <h3>C'est durant mon année de 3ème que j'ai découvert ma passion pour l'informatique. <br>
+                C'est pourquoi j'ai réalisé mon stage de 3ème dans un service informatique.</h3></boxleft>
             <boxvide></boxvide>
         </container>
     </div>
@@ -149,11 +149,11 @@
         <titre>Mes Projets</titre>
         <container>
             <box><h2>Jeu des allumettes </h2>
-                <h3>réalisé en php en 2023</h3></box>
+                <h3>J'ai réalisé ce projet tout seul en php en 2023. C'est ma première decouverte du php.</h3></box>
             <box><h2>Mastermind</h2>
-            <h3>réalisé en python en 2023</h3></box>
+            <h3>C'est un projet scolaire réalisé en python en 2023. Il n'y a pas d'interface graphique tout ce joue sur la console</h3></box>
             <box><h2>Morpion</h2>
-            <h3>réalisé en python en 2021</h3></box>
+            <h3>C'est un de mes premier projet scolaire en informatique réalisé en python en 2021. Il se joue à 2 joueurs sur la console. J'ai également réalisé une version face à un bot (plusieurs versions de difficultés).</h3></box>
         </container>
     </div>
     <div class="bar" id="Contact"></div>
@@ -179,7 +179,7 @@
                         <label for="message">Votre Message</label>
                         <textarea id="message" name="message" placeholder="Votre message..." style="height:100px" required></textarea>
                         
-                        <input type="submit" value="Envoyé le message">
+                        <input type="submit" value="Envoyer le message">
                     </form>
                 </div>
             </div>
