--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h1>Mes experiences</h1>
         <div class="expBoxContainer">
             <div class="expBox">
-                <div class="expSVGContainer"><img src="assets/logo_python.png" width="55%" filter:invert(1)></div>
+                <div class="expSVGContainer"><img src="assets/logo_python.png" width="55%" ></div>
                 <div class="expNameContainer">
                     <p>Python</p>
                 </div>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="expBox">
-                <div class="expSVGContainer"><img src="assets/logo_html.png" width="55%" filter:saturate(0%)></div>
+                <div class="expSVGContainer"><img src="assets/logo_html.png" width="55%" ></div>
                 <div class="expNameContainer">
                     <p>HTML</p>
                 </div>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="expBox">
-                <div class="expSVGContainer"><img src="assets/logo_kotlin.png" width="55%" filter:invert(1)></div>
+                <div class="expSVGContainer"><img src="assets/logo_kotlin.png" width="55%" ></div>
                 <div class="expNameContainer">
                     <p>Kotlin</p>
                 </div>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="expBox">
-                <div class="expSVGContainer"><img src="assets/logo_css.png" width="55%" filter:invert(1)></div>
+                <div class="expSVGContainer"><img src="assets/logo_css.png" width="55%" ></div>
                 <div class="expNameContainer">
                     <p>CSS</p>
                 </div>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="expBox">
-                <div class="expSVGContainer"><img src="assets/logo_golang.png" width="55%" filter:invert(1)></div>
+                <div class="expSVGContainer"><img src="assets/logo_golang.png" width="55%" ></div>
                 <div class="expNameContainer">
                     <p>Golang</p>
                 </div>
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="expBox">
-                <div class="expSVGContainer"><img src="assets/logo_sql.png" width="55%" filter:invert(1)></div>
+                <div class="expSVGContainer"><img src="assets/logo_sql.png" width="55%" ></div>
                 <div class="expNameContainer">
                     <p>SQL</p>
                 </div>
@@ -148,12 +148,31 @@
     <div class="projets">
         <titre>Mes Projets</titre>
         <container>
-            <box><h2>Jeu des allumettes </h2>
-                <h3>J'ai réalisé ce projet tout seul en php en 2023. C'est ma première decouverte du php.</h3></box>
-            <box><h2>Mastermind</h2>
-            <h3>C'est un projet scolaire réalisé en python en 2023. Il n'y a pas d'interface graphique tout ce joue sur la console</h3></box>
-            <box><h2>Morpion</h2>
-            <h3>C'est un de mes premier projet scolaire en informatique réalisé en python en 2021. Il se joue à 2 joueurs sur la console. J'ai également réalisé une version face à un bot (plusieurs versions de difficultés).</h3></box>
+            <box>
+                <h2>Site D'hébergement Minecraft Fictif </h2>
+                <h3>Pour un projet WEB en groupe de 3 en 2024, nous avons réalisé un site fictif d'hébergement de serveur Minecraft</h3>
+                <imagebox><img src="assets/pagehostMc.webp" width="85%" ></imagebox>
+            </box>
+            <box>
+                <h2>Projet d'éxploitation de données </h2>
+                <h3>Pour un projet de Base de Données en groupe de 4 en 2024, nous avons éffectué des requètes sur des bornes de recharges de la région. Nous nous somme répartis les tables par département et nous sommes données différents privilèges pour avoir accès aux données des autres.</h3>
+                <imagebox><img src="assets/pagesql.png" width="85%" ></imagebox>
+            </box>
+            <box>
+                <h2>Jeu des allumettes </h2>
+                <h3>J'ai réalisé ce projet tout seul en php en 2023. C'est ma première decouverte du php.</h3>
+                <imagebox><img src="assets/pageallumette.png" width="85%" ></imagebox>
+            </box>
+            <box>
+                <h2>Mastermind</h2>
+                <h3>C'est un projet scolaire réalisé en python en 2023. Il n'y a pas d'interface graphique tout ce joue sur la console avec des points de couleurs</h3>
+                <imagebox><img src="assets/pagemaster.png" width="85%" ></imagebox>
+            </box>
+            <box>
+                <h2>Morpion</h2>
+                <h3>C'est un de mes premier projet scolaire en informatique réalisé en python en 2021. Il se joue à 2 joueurs sur la console. J'ai également réalisé une version face à un bot (plusieurs versions de difficultés).</h3>
+                <imagebox><img src="assets/pagemorpion.png" width="85%" ></imagebox>
+            </box>
         </container>
     </div>
     <div class="bar" id="Contact"></div>
