--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#Home"><li>Home</li></a>
                 <a href="#Qui"><li>Qui suis-je ?</li></a>
                 <a href="#Parcours"><li>Mon parcours</li></a>
-                <a href="#Experience"><li>Mes Experiences</li></a>
+                <a href="#Experience"><li>Mes Compétences</li></a>
                 <a href="#Projets"><li>Mes projets</li></a>
                 <a href="#Contact"><li>Contact</li></a>
             </ul>
@@ -74,7 +74,7 @@
     </div>
     <div class="bar" id="Experience"></div>
     <div class="expContainer">
-        <h1>Mes experiences</h1>
+        <h1>Mes Compétences</h1>
         <div class="expBoxContainer">
             <div class="expBox">
                 <div class="expSVGContainer"><img src="assets/logo_python.png" width="55%" ></div>
