--- a/index.html
+++ b/index.html
@@ -149,28 +149,28 @@
         <titre>Mes Projets</titre>
         <container>
             <box>
-                <h2>Site D'hébergement Minecraft Fictif </h2>
+                <h2>Site d'hébergement Minecraft Fictif </h2>
                 <h3>Pour un projet WEB en groupe de 3 en 2024, nous avons réalisé un site fictif d'hébergement de serveur Minecraft</h3>
                 <imagebox><img src="assets/pagehostMc.webp" width="85%" ></imagebox>
             </box>
             <box>
-                <h2>Projet d'éxploitation de données </h2>
-                <h3>Pour un projet de Base de Données en groupe de 4 en 2024, nous avons éffectué des requètes sur des bornes de recharges de la région. Nous nous somme répartis les tables par département et nous sommes données différents privilèges pour avoir accès aux données des autres.</h3>
+                <h2>Projet d'exploitation  de données </h2>
+                <h3>Pour un projet de Base de Données en groupe de 4 en 2024, nous avons effectué des requêtes sur des bornes de recharges de la région. Nous nous sommes réparti les tables par département et nous sommes données différents privilèges pour avoir accès aux données des autres.</h3>
                 <imagebox><img src="assets/pagesql.png" width="85%" ></imagebox>
             </box>
             <box>
                 <h2>Jeu des allumettes </h2>
-                <h3>J'ai réalisé ce projet tout seul en php en 2023. C'est ma première decouverte du php.</h3>
+                <h3>J'ai réalisé ce projet tout seul en php en 2023. C'est ma première découverte du php.</h3>
                 <imagebox><img src="assets/pageallumette.png" width="85%" ></imagebox>
             </box>
             <box>
                 <h2>Mastermind</h2>
-                <h3>C'est un projet scolaire réalisé en python en 2023. Il n'y a pas d'interface graphique tout ce joue sur la console avec des points de couleurs</h3>
+                <h3>C'est un projet scolaire réalisé en python en 2023. Il n'y a pas d'interface graphique le jeu se déroule sur la console avec des points de couleurs</h3>
                 <imagebox><img src="assets/pagemaster.png" width="85%" ></imagebox>
             </box>
             <box>
                 <h2>Morpion</h2>
-                <h3>C'est un de mes premier projet scolaire en informatique réalisé en python en 2021. Il se joue à 2 joueurs sur la console. J'ai également réalisé une version face à un bot (plusieurs versions de difficultés).</h3>
+                <h3>C'est un de mes premiers projets scolaires en informatique réalisé en python en 2021. Il se joue à 2 joueurs sur la console. J'ai également réalisé une version face à un bot (plusieurs versions de difficultés).</h3>
                 <imagebox><img src="assets/pagemorpion.png" width="85%" ></imagebox>
             </box>
         </container>
@@ -190,10 +190,10 @@
                 <div class="contact-form">
                     <form id="contactForm" action="#" method="post">
                         <label for="name">Votre Nom</label>
-                        <input type="text" id="name" name="name" placeholder="Votre name.." required>
+                        <input type="text" id="name" name="name" placeholder="Votre nom..." required>
                         
                         <label for="email">Votre Email</label>
-                        <input type="email" id="email" name="email" placeholder="Votre email.." required>
+                        <input type="email" id="email" name="email" placeholder="Votre email..." required>
                         
                         <label for="message">Votre Message</label>
                         <textarea id="message" name="message" placeholder="Votre message..." style="height:100px" required></textarea>
