--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <container>J’adore tous les jeux de logique, la lecture et le vélo.</container>
         <container>Dans l’informatique, j’apprécie particulièrement l’esprit d’équipe.</container>
         <container>Les différents projets développés durant mes études m’ont permis d’acquérir de la rigueur</container>        
-        <container>Ce qui me fait vibrer, c’est de partir de 0 et de voir son projet grandir.</container>
+        <container>Ce qui me fait vibrer, c’est de partir de 0 et de voir mon projet grandir.</container>
     </div>
     <div class="bar" id="Parcours"></div>
     <div class="parcours">
