--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <container>Je suis actuellement étudiant en première année d’informatique à Nantes.</container>
         <container>J’adore tous les jeux de logique, la lecture et le vélo.</container>
         <container>Dans l’informatique, j’apprécie particulièrement l’esprit d’équipe.</container>
-        <container>Les différents projets développés durant mes études m’ont permis d’acquérir de la rigueur</container>        
+        <container>Les différents projets développés durant mes études m’ont permis d’acquérir de la rigueur.</container>        
         <container>Ce qui me fait vibrer, c’est de partir de 0 et de voir mon projet grandir.</container>
     </div>
     <div class="bar" id="Parcours"></div>
@@ -65,7 +65,7 @@
             <boxright><h2>Lycée Polyvalent Joubert Maillard  -  Ancenis  -  2020/2023</h2>
             <h3>J'ai tout naturellement choisit de suivre les spécialités Mathématiques et NSI.</h3>
             <h3>J'ai eu l'occasion de découvrir les bases de l'informatique et de développé</h3>
-            <h3> quelques minis jeux en Python ainsi que des sites en HTML</h3></boxright>
+            <h3> quelques minis jeux en Python ainsi que des sites en HTML.</h3></boxright>
             <boxleft><h2>Collège René Guy Cadou  -  Ancenis  -  2016/2020</h2>
             <h3>C'est durant mon année de 3ème que j'ai découvert ma passion pour l'informatique. <br>
                 C'est pourquoi j'ai réalisé mon stage de 3ème dans un service informatique.</h3></boxleft>
@@ -150,7 +150,7 @@
         <container>
             <box>
                 <h2>Site d'hébergement Minecraft Fictif </h2>
-                <h3>Pour un projet WEB en groupe de 3 en 2024, nous avons réalisé un site fictif d'hébergement de serveur Minecraft</h3>
+                <h3>Pour un projet WEB en groupe de 3 en 2024, nous avons réalisé un site fictif d'hébergement de serveur Minecraft.</h3>
                 <imagebox><img src="assets/pagehostMc.webp" width="85%" ></imagebox>
             </box>
             <box>
@@ -160,12 +160,12 @@
             </box>
             <box>
                 <h2>Jeu des allumettes </h2>
-                <h3>J'ai réalisé ce projet tout seul en php en 2023. C'est ma première découverte du php.</h3>
+                <h3>J'ai réalisé ce projet tout seul en php en 2023. C'est ma première découverte du php. Il se joue à 2 joueurs et celui qui prend la dèrnière allumette a perdu.</h3>
                 <imagebox><img src="assets/pageallumette.png" width="85%" ></imagebox>
             </box>
             <box>
                 <h2>Mastermind</h2>
-                <h3>C'est un projet scolaire réalisé en python en 2023. Il n'y a pas d'interface graphique le jeu se déroule sur la console avec des points de couleurs</h3>
+                <h3>C'est un projet scolaire réalisé en python en 2023. Il n'y a pas d'interface graphique le jeu se déroule sur la console avec des lettres de couleurs.</h3>
                 <imagebox><img src="assets/pagemaster.png" width="85%" ></imagebox>
             </box>
             <box>
