--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <right>
             <titre>Hello !</titre>
             <texte>Je suis Maxime Piau, <br>
-                étudiant en 1ère année<br>
+                étudiant en 2ème année<br>
                 d'informatique à Nantes 
             </texte>
         </right>
@@ -46,26 +46,27 @@
     <div class="qui" >
         <titre>Qui-suis-je ?</titre>
         <container>Je suis Maxime Piau et j’ai 19 ans.</container>
-        <container>Je suis actuellement étudiant en première année d’informatique à Nantes.</container>
-        <container>J’adore tous les jeux de logique, la lecture et le vélo.</container>
+        <container>Je suis actuellement étudiant en deuxième année d’informatique à Nantes.</container>
+        <container>J’adore tous les jeux de logique, les romans et le vélo.</container>
         <container>Dans l’informatique, j’apprécie particulièrement l’esprit d’équipe.</container>
         <container>Les différents projets développés durant mes études m’ont permis d’acquérir de la rigueur.</container>        
-        <container>Ce qui me fait vibrer, c’est de partir de 0 et de voir mon projet grandir.</container>
+        <container>Ce qui me plait le plus en informatique, c’est de partir de 0 et de voir mon projet grandir.</container>
     </div>
     <div class="bar" id="Parcours"></div>
     <div class="parcours">
         <titre>Mon Parcours</titre>
         <container>
-            <boxleft><h2>IUT Nantes  -  BUT informatique  -   2023/2024</h2>
+            <boxleft><h2>IUT Nantes  -  BUT informatique  -   2023/2025</h2>
                 <h3>J’ai découvert divers langages informatiques en BUT.</h3>
-                <h3>J’ai donc réalisé plusieurs projets comme des sites web (HTML et CSS), des requêtes en SQL, des mini-jeux en Golang, en Python et en Kotlin.
-                    </h3></boxleft>
+                <h3>J’ai donc réalisé plusieurs projets comme des sites web (HTML et CSS), des requêtes SQL, des mini-jeux en Golang et en Python ainsi qu'une application du jeu Skyjo en Kotlin.</h3>
+                <h3>J’ai également mis en place en cours de réseau un LAN, un DHCP et un SMTP .</h3>
+                    
+                </boxleft>
             <boxvide></boxvide>
             <boxvide></boxvide>
             <boxright><h2>Lycée Polyvalent Joubert Maillard  -  Ancenis  -  2020/2023</h2>
             <h3>J'ai tout naturellement choisit de suivre les spécialités Mathématiques et NSI.</h3>
-            <h3>J'ai eu l'occasion de découvrir les bases de l'informatique et de développé</h3>
-            <h3> quelques minis jeux en Python ainsi que des sites en HTML.</h3></boxright>
+            <h3>J'ai eu l'occasion de découvrir les bases de l'informatique et de développé quelques minis jeux en Python ainsi que des sites en HTML et CSS.</h3></boxright>
             <boxleft><h2>Collège René Guy Cadou  -  Ancenis  -  2016/2020</h2>
             <h3>C'est durant mon année de 3ème que j'ai découvert ma passion pour l'informatique. <br>
                 C'est pourquoi j'ai réalisé mon stage de 3ème dans un service informatique.</h3></boxleft>
@@ -75,6 +76,7 @@
     <div class="bar" id="Experience"></div>
     <div class="expContainer">
         <h1>Mes Compétences</h1>
+        <h3>Langages informatique</h3>
         <div class="expBoxContainer">
             <div class="expBox">
                 <div class="expSVGContainer"><img src="assets/logo_python.png" width="55%" ></div>
@@ -143,34 +145,81 @@
                 </div>
             </div>
         </div>
+        <h3>Logiciels de travail</h3>
+        <div class="environnementtravail">
+            <container>
+                <box>
+                    <h2>Gitlab </h2>
+                    <h3>Depuis 2023, j'utilise Gitlab pour stocker tout mes projets. Cela permet de travailler plus facilement en groupe.</h3>
+                    <imagebox><img src="assets/gitlab_logo.webp" width="30%" ></imagebox>
+                </box>
+            </container>
+            <container>
+                <box>
+                    <h2>Visual Studio Code </h2>
+                    <h3>J'ai commencé à utiliser Visual Studio Code en 3ème suite à un stage d'informatique.<br> Je l'utilise quand je code en python, golang, html, css, javascript, php, etc. </h3>
+                    <imagebox><img src="assets/vsc_logo.png" width="30%" ></imagebox>
+                </box>
+            </container>
+            <container>
+                <box>
+                    <h2>IntelliJ </h2>
+                    <h3>J'utilise IntelliJ pour coder en Kotlin. Ainsi, je peux coder, tester et compiler mon code facilement.</h3>
+                    <imagebox><img src="assets/intelliJ_logo.png" width="30%" ></imagebox> 
+                </box>
+            </container>
+        </div>
     </div>
     <div class="bar" id="Projets"></div>
     <div class="projets">
         <titre>Mes Projets</titre>
         <container>
+
+            <box>
+                <h2>Site de mini-jeux</h2>
+                <description>
+                    Pendant les vacances de 2024, j'ai voulu essayer le javascript ! J'ai donc réalisé un site web contenant des mini-jeux (jeux des allumettes, morpion, mastermind) en javascript.
+                    <voirplus><a href="https://github.com/Max04git/jeux"> Voir le code sur Github</a></voirplus>
+                </description>
+                <imagebox><img src="assets/pageminijeux.png" width="62%" ></imagebox>
+            </box>
+            <box>
+                <h2>Application Skyjo </h2>
+                <description>
+                    Pour un projet de développement d'application en Kotlin en groupe de 5 en 2024, nous avons recréé le jeu de société Skyjo dans une application qui fonctionne en multijoueur.
+                    <voirplus><a href="https://gitlab.univ-nantes.fr/iut.info1.dev.objets/sae201.2024/project.etu/sae201.2024.21"> Voir le code sur Gitlab</a></voirplus>
+                </description>
+                <imagebox><img src="assets/pageskyjo.png" width="68%" ></imagebox>
+            </box>
             <box>
                 <h2>Site d'hébergement Minecraft Fictif </h2>
-                <h3>Pour un projet WEB en groupe de 3 en 2024, nous avons réalisé un site fictif d'hébergement de serveur Minecraft.</h3>
+                <description>
+                    Pour un projet WEB en groupe de 3 en 2024, nous avons réalisé un site fictif d'hébergement de serveur Minecraft.
+                    <voirplus><a href="https://gitlab.univ-nantes.fr/E232643Y/r213_siteweb"> Voir le code sur Gitlab</a></voirplus>
+                </description>
                 <imagebox><img src="assets/pagehostMc.webp" width="85%" ></imagebox>
             </box>
             <box>
                 <h2>Projet d'exploitation  de données </h2>
-                <h3>Pour un projet de Base de Données en groupe de 4 en 2024, nous avons effectué des requêtes sur des bornes de recharges de la région. Nous nous sommes réparti les tables par département et nous sommes données différents privilèges pour avoir accès aux données des autres.</h3>
+                <description>Pour un projet de Base de Données en groupe de 4 en 2024, nous avons effectué des requêtes sur des bornes de recharges de la région. Nous nous sommes réparti les tables par département et nous sommes données différents privilèges pour avoir accès aux données des autres.</description>
                 <imagebox><img src="assets/pagesql.png" width="85%" ></imagebox>
             </box>
             <box>
+                <h2>Jeu vidéo en 2D </h2>
+                <description>
+                    Pour un projet de développement dans le langage Golang, nous avons réalisé en binomes un jeu vidéo en 2D avec le plateau qui d'affiche en quadtree.
+                    <voirplus><a href="https://gitlab.univ-nantes.fr/E235652T/sae-dev"> Voir le code sur Gitlab</a></voirplus>
+                </description>
+                <imagebox><img src="assets/pagequadtree.png" width="85%" ></imagebox>
+            </box>
+            <box>
                 <h2>Jeu des allumettes </h2>
-                <h3>J'ai réalisé ce projet tout seul en php en 2023. C'est ma première découverte du php. Il se joue à 2 joueurs et celui qui prend la dèrnière allumette a perdu.</h3>
+                <description>J'ai réalisé ce projet tout seul en php en 2023. C'est ma première découverte du php. Il se joue à 2 joueurs et celui qui prend la dèrnière allumette a perdu.</description>
                 <imagebox><img src="assets/pageallumette.png" width="85%" ></imagebox>
             </box>
             <box>
-                <h2>Mastermind</h2>
-                <h3>C'est un projet scolaire réalisé en python en 2023. Il n'y a pas d'interface graphique le jeu se déroule sur la console avec des lettres de couleurs.</h3>
-                <imagebox><img src="assets/pagemaster.png" width="85%" ></imagebox>
-            </box>
-            <box>
                 <h2>Morpion</h2>
-                <h3>C'est un de mes premiers projets scolaires en informatique réalisé en python en 2021. Il se joue à 2 joueurs sur la console. J'ai également réalisé une version face à un bot (plusieurs versions de difficultés).</h3>
+                <description>C'est un de mes premiers projets scolaires en informatique réalisé en python en 2021. Il se joue à 2 joueurs sur la console. J'ai également réalisé une version face à un bot (plusieurs versions de difficultés).</description>
                 <imagebox><img src="assets/pagemorpion.png" width="85%" ></imagebox>
             </box>
         </container>
@@ -212,8 +261,6 @@
     event.preventDefault();
     alert("Fonctionnalité non implémentée");
 });
-</script>
-<script>
     function toggleMenu() {
         var menu = document.querySelector('.menu');
         menu.classList.toggle('active');
